--- a/CSS CrashCourse/CSS/style.css
+++ b/CSS CrashCourse/CSS/style.css
@@ -20,9 +20,8 @@ a:active{
 }
 
 a:visited{
-    color: yellow;
+    
 }
-
 
 body{
     background-color: #f4f4f4;
@@ -44,6 +43,21 @@ body{
   margin: auto;
 }
 
+.button[type="submit"] {
+    background-color: #333;
+    color: #ffffff;
+    padding: 10px 15px;
+    border: none;
+}
+
+.button:hover{
+    background: red;
+    color: white;
+}
+
+.clr{
+    clear: both;
+}
 .box-1{
     background-color: #333333;
     color: #fff;
@@ -112,12 +126,76 @@ body{
     display: block;
 }
 
-.myForm input{
+.myForm input[type="test"], myForm textarea{
     padding: 8px;
     width: 100%;
 }
- 
+
 .block{
-    float:left;
+    float: left;
     width: 33.3%;
+    border: 1px solid #ccc ;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#mainBlock{
+    float: left;
+    width: 70%;
+    padding: 15px;
+        box-sizing: border-box;
+}
+
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid #000;
+    margin-top: 30px;
+    position: relative;
+    background-image:url('../images/download.jpeg');
+    background-repeat: no-repeat;
+    background-position: 100px 200px;
+    background-position: center center;
+}
+
+.p-box h1{
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me {
+    position: fixed;
+    top: 400px;
+}
+
+.myList li:first-child{
+    background: red;
+}
+
+.myList li:last-child {
+    background: blue;
+}
+
+.myList li:nth-child(5) {
+    background: yellow;
+}
+
+.myList li:nth-child(even) {
+    background: grey;
 }
