--- a/Acme Website/css/style.css
+++ b/Acme Website/css/style.css
@@ -84,7 +84,8 @@ header a:hover{
 
 #showcase{
     min-height: 400px;
-    background:url('../images/work.jpeg')no-repeat;
+    background:url('../images/work.jpeg')no-repeat center;
+    background-size: cover;
     text-align: center;
     color: #ffffff;
 }
@@ -173,6 +174,11 @@ footer{
     text-align: center;
     width: 100%;
    }
+
+   header nav ul{
+    margin-top: 50px;
+   }
+
 
    header{
     padding-bottom: 20px;
