--- a/Responsive Website Project/CSS/style1.css
+++ b/Responsive Website Project/CSS/style1.css
@@ -1,8 +1,12 @@
 body{
-    font-family:'Times New Roman', Times, serif
+    margin: 0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.1em;
+    line-height: 1.5;
+    text-align: center;
 }
 
-
+/** Navbar */
 #navbar {
     background-color: lightblue;
     display: flex;
@@ -38,4 +42,15 @@ body{
     text-align: center;
     background-color: lightblue;
     margin: 50px;
+}
+
+/** Footer */
+#main-footer{
+    padding: 1em;
+    background: lightblue;
+    color: aliceblue;
+    text-align: center;
+}
+footer .grid{
+    background-color: lightblue;
 }
