--- a/Responsive Website Project/CSS/style5.css
+++ b/Responsive Website Project/CSS/style5.css
@@ -38,6 +38,11 @@ body {
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
+#section-a{
+    text-align:left;
+    margin-left: 50px;
+}
+
 /** Footer */
 #main-footer {
     padding: 1em;
