--- a/Responsive Website Project/CSS/style1.css
+++ b/Responsive Website Project/CSS/style1.css
@@ -7,8 +7,9 @@ body{
 }
 
 /** Navbar */
+
 #navbar {
-    background-color: lightblue;
+    background-color: #e27d60;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,6 +21,7 @@ body{
     color: aliceblue;
     margin: 20px;
     font-weight: 200;
+    font-size: 20px;
 }
 
 .item a:hover{
@@ -29,10 +31,12 @@ body{
 .item li{
     list-style: none;
     display: inline-flex;
-}
+} 
 
 /** how to change img colour  
  * https: //codepen.io/sosuke/pen/Pjoqqp */
+
+ 
 .image img{
     width: 50px;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
@@ -40,17 +44,47 @@ body{
 
 #section-a{
     text-align: center;
-    background-color: lightblue;
+    background-color: #e27d60;
     margin: 50px;
 }
 
+/** Form */
+#newsletter {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+#newsletter h3 {
+    margin-right: 20px;
+}
+
+#newsletter input[type="email"] {
+    padding: 4px;
+    height: 25px;
+    width: 250px;
+}
+
+.button {
+    height: 38px;
+    background-color: #e27d60;
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #ffffff;
+}
+
+.button:hover {
+    background-color: black;
+}
 /** Footer */
+ 
 #main-footer{
     padding: 1em;
-    background: lightblue;
+    background: #e27d60;
     color: aliceblue;
     text-align: center;
 }
 footer .grid{
-    background-color: lightblue;
+    background-color: #e27d60;
 }
