--- a/Responsive Website Project/CSS/style3.css
+++ b/Responsive Website Project/CSS/style3.css
@@ -8,7 +8,7 @@ body {
 
 
 #navbar {
-    background-color: lightblue;
+    background-color: #e27d60;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,14 +38,44 @@ body {
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
+/** Form */
+#newsletter {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+#newsletter h3 {
+    margin-right: 20px;
+}
+
+#newsletter input[type="email"] {
+    padding: 4px;
+    height: 25px;
+    width: 250px;
+}
+
+.button {
+    height: 38px;
+    background-color: #e27d60;
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #ffffff;
+}
+
+.button:hover {
+    background-color: black;
+}
+
 /** Footer */
 #main-footer {
     padding: 1em;
-    background: lightblue;
+    background: #e27d60;
     color: aliceblue;
     text-align: center;
 }
 
 footer .grid {
-    background-color: lightblue;
+    background-color: #e27d60;
 }
