--- a/Responsive Website Project/CSS/style5.css
+++ b/Responsive Website Project/CSS/style5.css
@@ -8,7 +8,7 @@ body {
 
 
 #navbar {
-    background-color: lightblue;
+    background-color: #e27d60;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,14 +43,62 @@ body {
     margin-left: 50px;
 }
 
+#section-b{
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 0;
+}
+
+.social-media{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.social-media img{
+    width: 50px;
+    height: auto;
+    margin-right: 5px;
+}
+
+/** Form */
+#newsletter{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+#newsletter h3{
+    margin-right: 20px;
+}
+
+#newsletter input[type="email"] {
+    padding: 4px;
+    height: 25px;
+    width: 250px;
+}
+
+.button {
+    height: 38px;
+    background-color: #e27d60;
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #ffffff;
+}
+
+.button:hover{
+    background-color: black;
+}
+
 /** Footer */
 #main-footer {
     padding: 1em;
-    background: lightblue;
+    background: #e27d60;
     color: aliceblue;
     text-align: center;
 }
 
 footer .grid {
-    background-color: lightblue;
+    background-color: #e27d60;
 }
