--- a/Responsive Website Project/CSS/style5.css
+++ b/Responsive Website Project/CSS/style5.css
@@ -7,6 +7,7 @@ body {
 }
 
 
+
 #navbar {
     background-color: #e27d60;
     display: flex;
@@ -35,23 +36,34 @@ body {
  * https: //codepen.io/sosuke/pen/Pjoqqp */
 .image img {
     width: 50px;
+    margin-left: 10px;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
+.faq-link{
+    color: black;
+    text-decoration: underline;
+}
+
+.faq-link:hover{
+    color: #e27d60;
+}
+
 #section-a{
-    text-align:left;
+    text-align:center;
+    font-size: 35px;
     margin-left: 50px;
 }
 
 #section-b{
-    text-align: left;
+    text-align: center;
     margin-left: 50px;
     margin-top: 0;
 }
 
 .social-media{
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
 }
 
@@ -61,7 +73,57 @@ body {
     margin-right: 5px;
 }
 
+.container {
+    max-width:950px;
+    margin: 100px auto;
+    padding: 10px;
+    display: grid;
+
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 100px);
+    gap: 10px;
+    /*height: 100vh; */
+}
+
+.item:nth-of-type(3){
+    grid-column: 1/3;
+}
+
+.item:nth-of-type(4){
+    grid-column: 1/3;
+}
+.item:nth-of-type(5){
+    grid-column: 1/3;
+}
+
+.input-box{
+   border: 1px solid #c38d9e;
+   width: 500px;
+   height: 30px;
+}
+
+#name label, #email label, #message label{
+    display: flex;
+    justify-content: left;
+}
+
+#name input, #last-name input, #email input, #message input{
+    display: flex;
+    justify-content: left;
+}
+
+#email-box{
+    width: 1015px;
+}
+#message-box{
+    height: 100px;
+    width: 1015px;
+}
+
+
+
 /** Form */
+/** 
 #newsletter{
     display: flex;
     justify-content: right;
@@ -76,15 +138,17 @@ body {
     padding: 4px;
     height: 25px;
     width: 250px;
-}
+} */
 
 .button {
-    height: 38px;
-    background-color: #e27d60;
+    height: 50px;
+    width: auto;
+    background-color: #c38d9e;
     border: 0;
     padding-left: 20px;
     padding-right: 20px;
     color: #ffffff;
+    margin-top: 100px;
 }
 
 .button:hover{
