--- a/Responsive Website Project/CSS/style1.css
+++ b/Responsive Website Project/CSS/style1.css
@@ -39,6 +39,7 @@ body{
  
 .image img{
     width: 50px;
+    margin-left: 10px;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
