--- a/Responsive Website Project/CSS/style4.css
+++ b/Responsive Website Project/CSS/style4.css
@@ -4,7 +4,7 @@ body {
     font-size: 1.1em;
     line-height: 1.5;
     text-align: center;
-}
+} 
 
 #navbar {
     background-color: #e27d60;
@@ -34,7 +34,40 @@ body {
  * https: //codepen.io/sosuke/pen/Pjoqqp */
 .image img {
     width: 50px;
+    margin-left: 10px;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+}
+
+.products {
+    max-width: 900px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    
+    padding: 10px;
+    display: grid;
+
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 250px, 20px, 250px, 20px;
+    gap: 30px;
+    /*height: 100vh; */
+}
+
+.product img{
+    width: 400px;
+    height: auto;
+}
+
+.product{
+    border: #c38d9e solid 5px;
+}
+
+.product-name{
+    text-align: left;
 }
 
 /** Form */
@@ -56,7 +89,7 @@ body {
 
 .button {
     height: 38px;
-    background-color: #e27d60;
+    background-color: #c38d9e;
     border: 0;
     padding-left: 20px;
     padding-right: 20px;
@@ -65,6 +98,10 @@ body {
 
 .button:hover {
     background-color: black;
+}
+
+.cat-alternate img:hover{
+    background: url("../images/cat-alternate.png");
 }
 
 /** Footer */
