--- a/Responsive Website Project/CSS/style5.css
+++ b/Responsive Website Project/CSS/style5.css
@@ -73,9 +73,13 @@ body {
     margin-right: 5px;
 }
 
+.main{
+    display: flex;
+    justify-content: center;
+}
 .container {
-    max-width:950px;
-    margin: 100px auto;
+    
+    margin-bottom: 100px;
     padding: 10px;
     display: grid;
 
@@ -121,24 +125,6 @@ body {
 }
 
 
-
-/** Form */
-/** 
-#newsletter{
-    display: flex;
-    justify-content: right;
-    align-items: center;
-}
-
-#newsletter h3{
-    margin-right: 20px;
-}
-
-#newsletter input[type="email"] {
-    padding: 4px;
-    height: 25px;
-    width: 250px;
-} */
 
 .button {
     height: 50px;
