--- a/Responsive Website Project/CSS/style4.css
+++ b/Responsive Website Project/CSS/style4.css
@@ -70,21 +70,53 @@ body {
     text-align: left;
 }
 
+
+#cat-alternate:hover {
+    background-image: url("../images/cat-alternate.png");
+    width: 400px;
+    height: auto;
+}
+
+#elephant-alternate:hover {
+    background-image: url("../images/elephant-alternate.png");
+    width: 400px;
+    height: auto;
+}
+
+#cat1-alternate:hover {
+    background-image: url("../images/cat1-alternate.png");
+    width: 400px;
+    height: auto;
+}
+
+#panda-alternate:hover {
+    background-image: url("../images/panda-alternate.png");
+    width: 400px;
+    height: auto;
+}
+
+
 /** Form */
 #newsletter {
     display: flex;
     justify-content: right;
     align-items: center;
+    margin-right: 10px;
 }
 
 #newsletter h3 {
-    margin-right: 20px;
+    margin-right: 10px;
+    color: #c38d9e;
 }
+
+
 
 #newsletter input[type="email"] {
     padding: 4px;
     height: 25px;
     width: 250px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: #c38d9e solid 1px;
 }
 
 .button {
@@ -94,15 +126,14 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     color: #ffffff;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .button:hover {
     background-color: black;
 }
 
-.cat-alternate img:hover{
-    background: url("../images/cat-alternate.png");
-}
+
 
 /** Footer */
 #main-footer {
