--- a/Responsive Website Project/CSS/style1.css
+++ b/Responsive Website Project/CSS/style1.css
@@ -54,29 +54,32 @@ body{
     display: flex;
     justify-content: right;
     align-items: center;
+    margin-right: 10px;
 }
 
 #newsletter h3 {
-    margin-right: 20px;
+    margin-right: 10px;
+    color: #c38d9e;
 }
+
+
 
 #newsletter input[type="email"] {
     padding: 4px;
     height: 25px;
     width: 250px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: #c38d9e solid 1px;
 }
 
 .button {
     height: 38px;
-    background-color: #e27d60;
+    background-color: #c38d9e;
     border: 0;
     padding-left: 20px;
     padding-right: 20px;
     color: #ffffff;
-}
-
-.button:hover {
-    background-color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 /** Footer */
  
