--- a/Responsive Website Project/CSS/about.css
+++ b/Responsive Website Project/CSS/about.css
@@ -1,12 +1,11 @@
-body{
+body {
     margin: 0;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.1em;
     line-height: 1.5;
     text-align: center;
 }
 
-/** Navbar */
 
 #navbar {
     background-color: #e27d60;
@@ -14,39 +13,39 @@ body{
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-} 
+}
 
-.item a{
+.item a {
     text-decoration: none;
     color: aliceblue;
     margin: 20px;
     font-weight: 200;
-    font-size: 20px;
 }
 
-.item a:hover{
+.item a:hover {
     color: black;
 }
 
-.item li{
+.item li {
     list-style: none;
     display: inline-flex;
-} 
+}
 
 /** how to change img colour  
  * https: //codepen.io/sosuke/pen/Pjoqqp */
-
- 
-.image img{
+.image img {
     width: 50px;
     margin-left: 10px;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
-#section-a{
+
+#header-background {
+    min-height: 400px;
+    background: url('../images/work.jpeg')no-repeat center;
+    background-size: cover;
     text-align: center;
-    background-color: #e27d60;
-    margin: 50px;
+    color: #ffffff;
 }
 
 /** Form */
@@ -81,14 +80,15 @@ body{
     color: #ffffff;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
 /** Footer */
- 
-#main-footer{
+#main-footer {
     padding: 1em;
     background: #e27d60;
     color: aliceblue;
     text-align: center;
 }
-footer .grid{
+
+footer .grid {
     background-color: #e27d60;
 }
