--- a/Responsive Website Project/CSS/about.css
+++ b/Responsive Website Project/CSS/about.css
@@ -54,6 +54,47 @@ body {
     font-size: 65px;
 }
 
+#main{
+    display: flex;
+    justify-content: center;
+}
+
+.box-container{
+        max-width: 900px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+
+        padding: 10px;
+        display: grid;
+
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        column-gap: 100px;
+        row-gap: 30px;
+}
+
+.box-img img{
+    width: 400px;
+    height: auto;
+    border: #c38d9e solid 3px;
+}
+
+
+
+.box-left{
+    text-align: left;
+    
+}
+
+.box-left h2, .box-right h2{
+    color: #c38d9e;
+}
+
+.box-right{
+    text-align: right;
+}
+
+
 
 
 
