changed colour for footer and navbar text

--- a/Responsive Website Project/CSS/about.css
+++ b/Responsive Website Project/CSS/about.css
@@ -135,7 +135,7 @@ body {
 #main-footer {
     padding: 1em;
     background: #e27d60;
-    color: aliceblue;
+    color: white;
     text-align: center;
 }
 
