--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -18,7 +18,7 @@ body {
 
 .item a {
     text-decoration: none;
-    color: aliceblue;
+    color: white;
     margin: 20px;
     font-weight: 200;
 }
@@ -153,7 +153,7 @@ body {
 #main-footer {
     padding: 1em;
     background: #e27d60;
-    color: aliceblue;
+    color: white;
     text-align: center;
 }
 
