--- a/Responsive Website Project/CSS/products.css
+++ b/Responsive Website Project/CSS/products.css
@@ -16,7 +16,7 @@ body {
 
 .item a {
     text-decoration: none;
-    color: aliceblue;
+    color: white;
     margin: 20px;
     font-weight: 200;
 }
@@ -60,7 +60,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 250px, 20px, 250px, 20px;
     gap: 30px;
-    /*height: 100vh; */
+    
 }
 
 .product img{
@@ -145,7 +145,7 @@ body {
 #main-footer {
     padding: 1em;
     background: #e27d60;
-    color: aliceblue;
+    color: white;
     text-align: center;
 }
 
