--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -85,7 +85,6 @@ body {
 }
 
 .container {
-    
     margin-bottom: 100px;
     padding: 10px;
     display: grid;
@@ -93,7 +92,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 100px);
     gap: 10px;
-    /*height: 100vh; */
+
 }
 
 .item:nth-of-type(3){
@@ -107,7 +106,7 @@ body {
     grid-column: 1/3;
 }
 
-.input-box{
+.input-box, textarea{
    border: 1px solid #c38d9e;
    width: 500px;
    height: 30px;
@@ -117,12 +116,18 @@ body {
     display: flex;
     justify-content: left;
     color: #c38d9e;
+    font-weight: bold;
 }
 
-#name input, #last-name input, #email input, #message input{
+::placeholder{
+    opacity: 60%;
+}
+
+#name input, #last-name input, #email input, #message textarea{
     display: flex;
     justify-content: left;
 }
+
 
 #email-box{
     width: 1015px;
