--- a/Responsive Website Project/CSS/faq.css
+++ b/Responsive Website Project/CSS/faq.css
@@ -39,6 +39,25 @@ body {
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
+.container{
+    width: 66%;
+    margin: auto;
+    display: grid;
+    margin-top: 50px;
+        margin-bottom: 100px;
+    
+        padding: 10px;
+        display: grid;
+    
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+}
+
+.question{
+    text-align: left;
+    border: #c38d9e solid 5px;
+}
+
 #header h1{
     font-size: 50px;
     color: #c38d9e;
@@ -84,42 +103,9 @@ input:checked+label+.content {
     display: block;
 }
 
-/** Form */
-#newsletter {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    margin-right: 10px;
-}
-
-#newsletter h3 {
-    margin-right: 10px;
-    color: #c38d9e;
-}
 
 
 
-#newsletter input[type="email"] {
-    padding: 4px;
-    height: 25px;
-    width: 250px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border: #c38d9e solid 1px;
-}
-
-.button {
-    height: 38px;
-    background-color: #c38d9e;
-    border: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: #ffffff;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.button:hover {
-    background-color: black;
-}
 
 /** Footer */
 #main-footer {
