--- a/Responsive Website Project/CSS/home.css
+++ b/Responsive Website Project/CSS/home.css
@@ -138,35 +138,32 @@ body{
 
 
 
-
-#section-c{
-    display: flex;
-    justify-content: center;
+#section-b{
+    text-align: center;
 }
+
+
 
 #box{
     max-width: 900px;
+    margin-top: 20px;
     margin-bottom: 100px;
     
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 20px;
     display: grid;
     
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
 }
 
-.link{
+.review{
     color: black;
     text-align: center;
     height: 300px;
-    width: 220px;
+    width: 300px;
     border: #c38d9e solid 2px;
 }
-
-.link a{
-    color: #c38d9e;
-}
-
 
 
 /** Form */
