--- a/Responsive Website Project/CSS/home.css
+++ b/Responsive Website Project/CSS/home.css
@@ -159,11 +159,21 @@ body{
 
 .review{
     color: black;
-    text-align: center;
+    text-align: left;
     height: 300px;
     width: 300px;
-    border: #c38d9e solid 2px;
+    border: #e27d60 solid 2px;
 }
+
+.review h3{
+    margin-left: 20px;
+}
+.review p{
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+}
+
 
 
 /** Form */
