--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -1,6 +1,11 @@
 body {
     margin: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Trebuchet MS',
+        'Lucida Sans Unicode',
+        'Lucida Grande',
+        'Lucida Sans',
+        Arial,
+        sans-serif;
     font-size: 1.1em;
     line-height: 1.5;
     text-align: center;
@@ -8,28 +13,105 @@ body {
 
 
 
-#navbar {
+/* Header */
+.header {
     background-color: #e27d60;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    width: 100%;
 }
 
-.item a {
-    text-decoration: none;
-    color: white;
-    margin: 20px;
-    font-weight: 200;
+/* Logo */
+.logo img {
+    width: 50px;
+    margin-left: 10px;
 }
 
-.item a:hover {
-    color: black;
+/* Nav menu */
+.nav {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
 }
 
-.item li {
+.menu li {
     list-style: none;
-    display: inline-flex;
+}
+
+
+.menu a {
+    display: block;
+    padding-right: 30px;
+    color: white;
+    text-decoration: none;
+}
+
+.nav {
+    max-height: 0;
+    transition: max-height .5s ease-out;
+}
+
+/* Menu Icon */
+.hamb {
+    cursor: pointer;
+    float: right;
+    padding: 40px 20px;
+}
+
+/* Style label tag */
+
+.hamb-line {
+    background: white;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 24px;
+
+}
+
+/* Style span tag */
+
+.hamb-line::before,
+.hamb-line::after {
+    background: white;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.hamb-line::before {
+    top: 5px;
+}
+
+.hamb-line::after {
+    top: -5px;
+}
+
+.side-menu {
+    display: none;
+}
+
+/* Hide checkbox */
+
+/* Toggle menu icon */
+.side-menu:checked~nav {
+    max-height: 100%;
+}
+
+.side-menu:checked~.hamb .hamb-line {
+    background: transparent;
+}
+
+.side-menu:checked~.hamb .hamb-line::before {
+    transform: rotate(-45deg);
+    top: 0;
+}
+
+.side-menu:checked~.hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top: 0;
 }
 
 /** how to change img colour  
@@ -49,7 +131,7 @@ body {
     color:#c38d9e;
 }
 
-#header{
+#header-page{
     text-align:center;
     font-size: 35px;
     margin-left: 50px;
@@ -164,4 +246,29 @@ body {
 
 footer .grid {
     background-color: #e27d60;
+}
+
+/* Responsiveness */
+@media (min-width: 768px) {
+    .nav {
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+    }
+
+    .menu li {
+        float: left;
+    }
+
+    .menu a:hover {
+        background-color: transparent;
+        color: var(--gray);
+
+    }
+
+    .hamb {
+        display: none;
+    }
 }
