--- a/Responsive Website Project/CSS/faq.css
+++ b/Responsive Website Project/CSS/faq.css
@@ -6,107 +6,6 @@ body {
     text-align: center;
 }
 
-
-/* Header */
-.header {
-    background-color: #e27d60;
-    width: 100%;
-}
-
-/* Logo */
-.logo img {
-    width: 50px;
-    margin-left: 10px;
-}
-
-/* Nav menu */
-.nav {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
-}
-
-.menu li {
-    list-style: none;
-}
-
-
-.menu a {
-    display: block;
-    padding-right: 30px;
-    color: white;
-    text-decoration: none;
-}
-
-.nav {
-    max-height: 0;
-    transition: max-height .5s ease-out;
-}
-
-/* Menu Icon */
-.hamb {
-    cursor: pointer;
-    float: right;
-    padding: 40px 20px;
-}
-
-/* Style label tag */
-
-.hamb-line {
-    background: white;
-    display: block;
-    height: 2px;
-    position: relative;
-    width: 24px;
-
-}
-
-/* Style span tag */
-
-.hamb-line::before,
-.hamb-line::after {
-    background: white;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
-
-.hamb-line::before {
-    top: 5px;
-}
-
-.hamb-line::after {
-    top: -5px;
-}
-
-.side-menu {
-    display: none;
-}
-
-/* Hide checkbox */
-
-/* Toggle menu icon */
-.side-menu:checked~nav {
-    max-height: 100%;
-}
-
-.side-menu:checked~.hamb .hamb-line {
-    background: transparent;
-}
-
-.side-menu:checked~.hamb .hamb-line::before {
-    transform: rotate(-45deg);
-    top: 0;
-}
-
-.side-menu:checked~.hamb .hamb-line::after {
-    transform: rotate(45deg);
-    top: 0;
-}
 /** how to change img colour  
  * https: //codepen.io/sosuke/pen/Pjoqqp */
 .image img {
@@ -115,7 +14,7 @@ body {
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
-.container{
+.faqs{
     width: 66%;
     margin: auto;
     display: grid;
@@ -153,13 +52,12 @@ label {
     padding: 10px 22px;
     margin: 0 0 1px 0;
     cursor: pointer;
-    background: white;
     border-radius: 3px;
     color: black;
     transition: ease .5s;
 }
 
-label:hover {
+ .faqs label:hover {
     background: #c38d9e;
 }
 
@@ -182,40 +80,3 @@ input:checked+label+.content {
 
 
 
-
-/** Footer */
-#main-footer {
-    padding: 1em;
-    background: #e27d60;
-    color: white;
-    text-align: center;
-}
-
-footer .grid {
-    background-color: #e27d60;
-}
-
-/* Responsiveness */
-@media (min-width: 768px) {
-    .nav {
-        max-height: none;
-        top: 0;
-        position: relative;
-        float: right;
-        width: fit-content;
-    }
-
-    .menu li {
-        float: left;
-    }
-
-    .menu a:hover {
-        background-color: transparent;
-        color: var(--gray);
-
-    }
-
-    .hamb {
-        display: none;
-    }
-}
