made subscription responsive

--- a/Responsive Website Project/CSS/home.css
+++ b/Responsive Website Project/CSS/home.css
@@ -104,3 +104,18 @@ body{
     color: #ffffff;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+/** Responsiveness */
+
+@media (max-width: 768px){
+    #newsletter{
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-left: 10px;
+    }
+
+    #newsletter button{
+        margin-top: 10px;
+    }
+}
