--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -53,6 +53,7 @@ body {
 .main{
     display: flex;
     justify-content: center;
+   
 }
 
 .container {
@@ -76,7 +77,6 @@ body {
 .item:nth-of-type(5){
     grid-column: 1/3;
 }
-
 
 
 .input-box, textarea{
@@ -121,7 +121,11 @@ body {
     padding-right: 20px;
     color: #ffffff;
     margin-top: 100px;
-    
+}
+
+#b{
+    display: flex;
+    justify-content: center;
 }
 
 .button:hover{
