--- a/Responsive Website Project/CSS/menu-footer.css
+++ b/Responsive Website Project/CSS/menu-footer.css
@@ -2,6 +2,7 @@
 .header {
     background-color: #e27d60;
     width: 100%;
+    border-bottom: white solid 5px;
 }
 
 /* Logo */
@@ -16,7 +17,6 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-
 }
 
 .menu li {
