--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -26,12 +26,12 @@ body {
     text-align: center;
 }
 
-#section-b{
+#filler{
     text-align: center;
     margin: 5px;
 }
 
-#section-b h4{
+#filler h4{
     color: #c38d9e;
 }
 
