--- a/Responsive Website Project/CSS/about.css
+++ b/Responsive Website Project/CSS/about.css
@@ -10,6 +10,7 @@ body {
     line-height: 1.5;
 }
 
+/** Header background */
 #container{
     height: 400px;
     background-image: url('../images/elephant-contact.png');
@@ -24,6 +25,7 @@ body {
     text-align: center;
 }
 
+/** Main part of page */
 #main{
     display: flex;
     justify-content: center;
