--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -10,15 +10,7 @@ body {
     line-height: 1.5;
 }
 
-.faq-link{
-    color: black;
-    text-decoration: underline;
-}
-
-.faq-link:hover{
-    color:#c38d9e;
-}
-
+/** Page Header */
 #header-page{
     text-align:center;
     font-size: 35px;
@@ -35,6 +27,16 @@ body {
     color: #c38d9e;
 }
 
+.faq-link {
+    color: black;
+    text-decoration: underline;
+}
+
+.faq-link:hover {
+    color: #c38d9e;
+}
+
+/** Social Media */
 
 .social-media{
     display: flex;
@@ -48,6 +50,8 @@ body {
     margin-right: 5px;
 }
 
+
+/** Form */
 .main{
     display: flex;
     justify-content: center; 
