--- a/Responsive Website Project/CSS/products.css
+++ b/Responsive Website Project/CSS/products.css
@@ -10,6 +10,7 @@ body {
     line-height: 1.5;
 } 
 
+/** Page Header */
 .header-page{
     font-size: 30px;
     margin-bottom: 0;
@@ -17,6 +18,7 @@ body {
     text-align: center;
 }
 
+/** Products */
 .main{
     display: flex;
     justify-content: center;
