--- a/Responsive Website Project/CSS/contact.css
+++ b/Responsive Website Project/CSS/contact.css
@@ -114,6 +114,7 @@ body {
 .button {
     height: 50px;
     width: auto;
+    font-size: 15px;
     background-color: #c38d9e;
     border: 0;
     padding-left: 20px;
