--- a/Responsive Website Project/CSS/home.css
+++ b/Responsive Website Project/CSS/home.css
@@ -107,6 +107,7 @@ body{
 
 .button {
     height: 38px;
+    font-size: 15px;
     background-color: #c38d9e;
     border: 0;
     padding-left: 20px;
