changed table photo size

--- a/Responsive Website Project/CSS/home.css
+++ b/Responsive Website Project/CSS/home.css
@@ -27,7 +27,7 @@ body{
 .container{
     margin-top: -42px;
     height: 500px;
-    background-image: url('../images/table.png');
+    background-image: url('../images/table.jpeg');
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
