--- a/Sports Statistics Application/CSS/style.css
+++ b/Sports Statistics Application/CSS/style.css
@@ -14,3 +14,9 @@
   font-size: 14px;
   font-weight: 400;  
 }
+
+@media (max-width: 1024px) {
+  .pagination-previous, .pagination-next{
+    display: none;
+  }
+}
